--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@shopify/app": "^3.58.2",
     "@shopify/cli": "^3.64.1",
     "@shopify/prettier-plugin-liquid": "^1.4.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/prettier": "^2.7.2",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@volar-plugins/prettyhtml": "^2.0.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.23",
     "concurrently": "^8.0.1",
     "del-cli": "^5.1.0",
     "dotenv-cli": "^7.3.0",
@@ -53,7 +54,7 @@
     "eslint-plugin-lit": "^1.11.0",
     "eslint-plugin-prettier": "^5.1.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
+    "postcss": "^8.5.6",
     "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.4.19",
